parse csv correctly, make title wrap if too long, position pins

--- a/css/iceberg.css
+++ b/css/iceberg.css
@@ -45,6 +45,7 @@ canvas {
 #title {
 	color: white;
 	padding-top: 0px;
+	overflow-wrap: break-word;
 }
 
 #description {
